--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 
         <body>
             <h1>Odin Recipes</h1>
+            <ul>
+            <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="recipes/burger.html">Burger Recipe</a></li>
+            <li><a href="recipes/frenchfry.html">French Fry Recipe</a></li>
+            </ul>
         </body>
     </html>
